5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1635_2703.log
== TEST (2019-04-10 12:22:04) 
-- CODE:
num = int(input("digite um numero: "))
if (idade == 18):
	mensagem = "eleitor"
else ()
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
File "XXXX", line 4
    else ()
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:24:15) 
-- CODE:
num = int(input("digite um numero: "))
if (idade == 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade == 18):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:24:49) 
-- CODE:
num = int(input("digite um numero: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >= 18):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:26:10) 
-- CODE:
num = int(input("digite um numero: "))
if int((idade >= 18)):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if int((idade >= 18)):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:26:25) 
-- CODE:
num = int(input("digite um numero: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >= 18):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:45) 
-- CODE:
num = int(input("digite um numero: "))
if (idade >=+ 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >=+ 18):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:51) 
-- CODE:
num = int(input("digite um numero: "))
if (idade >== 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (idade >== 18):
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:27:54) 
-- CODE:
num = int(input("digite um numero: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    if (idade >= 18):
NameError: name 'idade' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:28:04) 
-- CODE:
num = int(input("digite um numero: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.19914
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2703/main.py", line 2, in <module>
    if (idade >= 18):
NameError: name 'idade' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:29:08) 
-- CODE:
idade = int(input("digite um numero: "))
if (idade >= 18):
	mensagem = "eleitor"
else:
	mensagem = "nao_eleitor"
	
print(mensagem)
-- EXECUTION TIME:
0.134413
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
